# local-bash-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mcp_shell_server/: __init__.py
